Первые правки в разметке «Барбершоп»

--- a/catalog_item.html
+++ b/catalog_item.html
@@ -15,7 +15,7 @@
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Новости</a></li>
 						<li><a href="#">Прайс-лист</a></li>
-						<li><a href="#">Магазин</a></li>
+						<li class="top_navigation_active">Магазин</li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
@@ -26,18 +26,20 @@
 		</header>
 		<main class="centred">
 			<div class="headline">
-				<h2>Набор для путешествий «Baxter of California»</h2>
+				<h1 class="main_headline">Набор для путешествий «Baxter of California»</h1>
 					<nav class="headline_navigation">
 						<ul>
 							<li><a href="#">Главная</a></li>
 							<li><a href="#">Магазин</a></li>
 							<li><a href="#">Средства для ухода</a></li>
-							<li><a href="#">Набор для путешествий «Baxter of California»</a></li>
+							<li>Набор для путешествий «Baxter of California»</li>
 						</ul>
 					</nav>
 			</div>
-			<figure class="item_gallery">
+			<figure class="item_big">
 				<img class="item_photo" src="img/complect_baxter_1_big.jpg" width="460" height="498" alt="Набор для путешествий Baxter of California">
+			</figure>
+			<figure class="item_small">
 				<a href="#">
 					<img class="item_photo" src="img/complect_baxter_2_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
 				</a>
@@ -58,7 +60,7 @@
 				<p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
 				<p class="item_price">2 900 руб.</p>
 				<a class="button" href="#">Купить</a>
-				<h3>В набор входят:</h3>
+				<h2>В набор входят:</h2>
 					<ul>
 						<li>Средство для умывания (50 мл)</li>
 						<li>Увлажняющий крем (50 мл)</li>
