--- a/catalog.html
+++ b/catalog.html
@@ -8,14 +8,16 @@
 		<header class="top_menu">
 			<div class="centred">
 				<div class="small_logo">
-					<img src="img/small_logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+					<a href="index.html" title="На главную">
+						<img src="img/small_logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+					</a>
 				</div>
 				<nav class="top_navigation">
 					<ul>
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Новости</a></li>
 						<li><a href="#">Прайс-лист</a></li>
-						<li><a href="#">Магазин</a></li>
+						<li class="top_navigation_active">Магазин</li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
@@ -26,19 +28,19 @@
 		</header>
 		<main class="centred">
 			<div class="headline">
-				<h2>Средства для ухода</h2>
+				<h1 class="main_headline">Средства для ухода</h1>
 					<nav class="headline_navigation">
 						<ul>
 							<li><a href="#">Главная</a></li>
 							<li><a href="#">Магазин</a></li>
-							<li><a href="#">Средства для ухода</a></li>
+							<li>Средства для ухода</li>
 						</ul>
 					</nav>
 			</div>
 			<aside>
 				<form action="#" method="get">
 					<div class="producers_filter">
-					<h3>Производители</h3>
+					<h2>Производители</h2>
 						<label>
 							<input type="checkbox" name="baxter" checked> Baxter of California
 						</label>
@@ -58,68 +60,80 @@
 							<input type="checkbox" name="amercrew" checked> American Crew
 						</label>	
 					</div>
-					<h3>Группы товаров</h3>
 					<div class="items_group_filter">
+					<h2>Группы товаров</h2>
 						<label>
-							<input type="checkbox" name="shaving"> Бритвенные принадлежности
+							<input type="radio" name="shaving"> Бритвенные принадлежности
 						</label>
 						<label>
-							<input type="checkbox" name="care" checked> Средства для ухода
+							<input type="radio" name="care" checked> Средства для ухода
 						</label>
 						<label>
-							<input type="checkbox" name="accessories" checked> Аксессуары
+							<input type="radio" name="accessories" checked> Аксессуары
 						</label>
 					</div>
-					<input class="button" type="submit" name="choosen" value="Показать">
+					<button class="button" type="submit" name="choosen">Показать</button>
 				</form>
 			</aside>
 			<div class="catalog">
 				<div class="catalog_item">
-					<img src="img/complect_baxter_prev.jpg" width="220" height="165" alt="Набор для путешествий Baxter of California">
-					<b>Набор для путешествий<br> 
-						«BAXTER OF CALIFORNIA»</b>
+					<a href="catalog_item.html">
+						<img src="img/complect_baxter_prev.jpg" width="220" height="165" alt="Набор для путешествий Baxter of California">
+						<b>Набор для путешествий<br> 
+							«BAXTER OF CALIFORNIA»</b>
+					</a>
 					<p class="item_price">2 900 руб.</p>
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
-					<img src="img/conditioner_baxter_prev.jpg" width="220" height="165" alt="Увлажняющий кодиционер Baxter of California">
-					<b>Увлажняющий кодиционер<br> 
-						«BAXTER OF CALIFORNIA»</b>
+					<a href="#">
+						<img src="img/conditioner_baxter_prev.jpg" width="220" height="165" alt="Увлажняющий кодиционер Baxter of California">
+						<b>Увлажняющий кодиционер<br> 
+							«BAXTER OF CALIFORNIA»</b>
+					</a>
 					<p class="item_price">750 руб.</p>
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
-					<img src="img/gel_suavecito_prev.jpg" width="220" height="165" alt="Гель для волос Suavecito">
-					<b>Гель для волос<br> 
-						«SUAVECITO»</b>
+					<a href="#">
+						<img src="img/gel_suavecito_prev.jpg" width="220" height="165" alt="Гель для волос Suavecito">
+						<b>Гель для волос<br> 
+							«SUAVECITO»</b>
+					</a>
 					<p class="item_price">290 руб.</p>
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
-					<img src="img/clay_amercrew_prev.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
-					<b>Глина для укладки волос<br> 
-						«AMERICAN CREW»</b>
+					<a href="#">
+						<img src="img/clay_amercrew_prev.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
+						<b>Глина для укладки волос<br> 
+							«AMERICAN CREW»</b>
+					</a>
 					<p class="item_price">500 руб.</p>
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
-					<img src="img/gel_amercrew_prev.jpg" width="220" height="165" alt="Гель для волос American Crew">
-					<b>Гель для волос<br> 
-						«AMERICAN CREW»</b>
+					<a href="#">
+						<img src="img/gel_amercrew_prev.jpg" width="220" height="165" alt="Гель для волос American Crew">
+						<b>Гель для волос<br> 
+							«AMERICAN CREW»</b>
+					</a>
 					<p class="item_price">300 руб.</p>
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
-					<img src="img/shaving_baxter.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
-					<b>Набор для бритья<br> 
-						«BAXTER OF CALIFORNIA»</b>
+					<a href="#">
+						<img src="img/shaving_baxter.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
+						<b>Набор для бритья<br> 
+							«BAXTER OF CALIFORNIA»</b>
+					</a>
 					<p class="item_price">3 900 руб.</p>
 					<a class="button" href="#">Купить</a>
 				</div>
 			</div>
 			<div class="paginator">
 				<a class="button" href="1">1</a>
-				<a class="button" href="2">2</a>
+				<div class="button_active">2</div>
 				<a class="button" href="3">3</a>
 				<a class="button" href="4">4</a>
 			</div>
@@ -135,8 +149,8 @@
 				<div class="footer_social">
 					<p>Давайте дружить!</p>
 					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          			<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          			<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
 				</div>
 				<div class="footer_copyright">
 					<p>Разработано:</p>
