--- a/catalog_item.html
+++ b/catalog_item.html
@@ -8,7 +8,9 @@
 		<header class="top_menu">
 			<div class="centred">
 				<div class="small_logo">
-					<img src="img/small_logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+					<a href="index.html" title="На главную">
+						<img src="img/small_logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+					</a>
 				</div>
 				<nav class="top_navigation">
 					<ul>
@@ -36,19 +38,21 @@
 						</ul>
 					</nav>
 			</div>
-			<figure class="item_big">
-				<img class="item_photo" src="img/complect_baxter_1_big.jpg" width="460" height="498" alt="Набор для путешествий Baxter of California">
-			</figure>
-			<figure class="item_small">
-				<a href="#">
-					<img class="item_photo" src="img/complect_baxter_2_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
-				</a>
-				<a href="#">
-					<img class="item_photo" src="img/complect_baxter_3_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
-				</a>
-				<a href="#">
-					<img class="item_photo" src="img/complect_baxter_4_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
-				</a>
+			<figure class="item_gallery">	
+				<figure class="item_big">
+					<img class="item_photo" src="img/complect_baxter_1_big.jpg" width="460" height="498" alt="Набор для путешествий Baxter of California">
+				</figure>
+				<figure class="item_small">
+					<a href="#">
+						<img class="item_photo" src="img/complect_baxter_2_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
+					</a>
+					<a href="#">
+						<img class="item_photo" src="img/complect_baxter_3_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
+					</a>
+					<a href="#">
+						<img class="item_photo" src="img/complect_baxter_4_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
+					</a>
+				</figure>
 			</figure>
 			<section class="item_description">
 				<table>
