--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header class="top_menu">
-			<div class="centred">
+			<div class="centred clearfix">
 				<div class="small_logo">
 					<a href="index.html" title="На главную">
 						<img src="img/small_logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
@@ -27,18 +27,18 @@
 				</div>
 			</div>
 		</header>
-		<main class="centred">
+		<main class="centred clearfix">
 			<div class="headline">
 				<h1 class="main_headline">Средства для ухода</h1>
-					<nav class="headline_navigation">
+					<nav class="breadcrumbs">
 						<ul>
 							<li><a href="#">Главная</a></li>
 							<li><a href="#">Магазин</a></li>
-							<li>Средства для ухода</li>
+							<li><a>Средства для ухода</a></li>
 						</ul>
 					</nav>
 			</div>
-			<aside>
+			<aside class="aside">
 				<form action="#" method="get">
 					<div class="producers_filter">
 					<h2>Производители</h2>
@@ -64,22 +64,22 @@
 					<div class="items_group_filter">
 					<h2>Группы товаров</h2>
 						<label>
-							<input type="radio" name="shaving"> Бритвенные принадлежности
+							<input type="radio" name="items_group" value="shave"> Бритвенные принадлежности
 						</label>
 						<label>
-							<input type="radio" name="care" checked> Средства для ухода
+							<input type="radio" name="items_group" value="care" checked> Средства для ухода
 						</label>
 						<label>
-							<input type="radio" name="accessories" checked> Аксессуары
+							<input type="radio" name="items_group" value="accessori"> Аксессуары
 						</label>
 					</div>
 					<button class="button" type="submit" name="choosen">Показать</button>
 				</form>
 			</aside>
-			<div class="catalog">
+			<div class="catalog clearfix">
 				<div class="catalog_item">
+					<img src="img/complect_baxter_prev.jpg" width="220" height="165" alt="Набор для путешествий Baxter of California">
 					<a href="catalog_item.html">
-						<img src="img/complect_baxter_prev.jpg" width="220" height="165" alt="Набор для путешествий Baxter of California">
 						<b>Набор для путешествий<br> 
 							«BAXTER OF CALIFORNIA»</b>
 					</a>
@@ -87,8 +87,8 @@
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
+					<img src="img/conditioner_baxter_prev.jpg" width="220" height="165" alt="Увлажняющий кодиционер Baxter of California">
 					<a href="#">
-						<img src="img/conditioner_baxter_prev.jpg" width="220" height="165" alt="Увлажняющий кодиционер Baxter of California">
 						<b>Увлажняющий кодиционер<br> 
 							«BAXTER OF CALIFORNIA»</b>
 					</a>
@@ -96,8 +96,8 @@
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
+					<img src="img/gel_suavecito_prev.jpg" width="220" height="165" alt="Гель для волос Suavecito">
 					<a href="#">
-						<img src="img/gel_suavecito_prev.jpg" width="220" height="165" alt="Гель для волос Suavecito">
 						<b>Гель для волос<br> 
 							«SUAVECITO»</b>
 					</a>
@@ -105,8 +105,8 @@
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
+					<img src="img/clay_amercrew_prev.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
 					<a href="#">
-						<img src="img/clay_amercrew_prev.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
 						<b>Глина для укладки волос<br> 
 							«AMERICAN CREW»</b>
 					</a>
@@ -114,8 +114,8 @@
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
+					<img src="img/gel_amercrew_prev.jpg" width="220" height="165" alt="Гель для волос American Crew">
 					<a href="#">
-						<img src="img/gel_amercrew_prev.jpg" width="220" height="165" alt="Гель для волос American Crew">
 						<b>Гель для волос<br> 
 							«AMERICAN CREW»</b>
 					</a>
@@ -123,8 +123,8 @@
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
+					<img src="img/shaving_baxter.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
 					<a href="#">
-						<img src="img/shaving_baxter.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
 						<b>Набор для бритья<br> 
 							«BAXTER OF CALIFORNIA»</b>
 					</a>
