--- a/catalog.html
+++ b/catalog.html
@@ -140,7 +140,7 @@
 			</div>
 		</main>
 		<footer class="main_footer">
-			<div class="centred">
+			<div class="centred clearfix">
 				<div class="footer_contacts">
 					<p>Барбершоп «Бородинский»</p>
 					<p>Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
