--- a/catalog_item.html
+++ b/catalog_item.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header class="top_menu">
-			<div class="centred">
+			<div class="centred clearfix">
 				<div class="small_logo">
 					<a href="index.html" title="На главную">
 						<img src="img/small_logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
@@ -27,7 +27,7 @@
 				</div>
 			</div>
 		</header>
-		<main class="centred">
+		<main class="centred clearfix">
 			<div class="headline">
 				<h1 class="main_headline">Набор для путешествий «Baxter of California»</h1>
 					<nav class="headline_navigation">
@@ -39,23 +39,27 @@
 						</ul>
 					</nav>
 			</div>
-			<figure class="item_gallery">	
-				<figure class="item_big">
+			<div class="item_gallery">	
+				<div class="item_big">
 					<img class="item_photo" src="img/complect_baxter_1_big.jpg" width="460" height="498" alt="Набор для путешествий Baxter of California">
-				</figure>
-				<figure class="item_small">
+				</div>
+				<div class="item_small">
 					<a href="#">
 						<img class="item_photo" src="img/complect_baxter_2_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
 					</a>
+				</div>
+				<div class="item_small">
 					<a href="#">
 						<img class="item_photo" src="img/complect_baxter_3_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
 					</a>
+				</div>
+				<div class="item_small">
 					<a href="#">
 						<img class="item_photo" src="img/complect_baxter_4_small.jpg" width="140" height="149" alt="Набор для путешествий Baxter of California">
 					</a>
-				</figure>
-			</figure>
-			<section class="item_description">
+				</div>
+			</div>
+			<div class="item_description">
 				<table>
 					<tr>
 						<td>Есть в наличии</td>
@@ -73,10 +77,10 @@
 						<li>Крем после бритья, шампунь (50 мл)</li>
 						<li>Удобная кожаная косметичка</li>
 					</ul>
-			</section>
+			</div>
 		</main>
 		<footer class="main_footer">
-			<div class="centred">
+			<div class="centred clearfix">
 				<div class="footer_contacts">
 					<p>Барбершоп «Бородинский»</p>
 					<p>Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
