Декоративные элементы «Барбершопа» в первом приближении

--- a/catalog_item.html
+++ b/catalog_item.html
@@ -3,22 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Барбершоп «Бородинский»: каталог товаров</title>
+		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="top_menu">
 			<div class="centred clearfix">
-				<div class="small_logo">
-					<a href="index.html" title="На главную">
-						<img src="img/small_logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
-					</a>
-				</div>
+				<a href="index.html" title="На главную">
+					<div class="small_logo"></div>
+				</a>
 				<nav class="top_navigation">
 					<ul>
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Новости</a></li>
 						<li><a href="#">Прайс-лист</a></li>
-						<li class="top_navigation_active">Магазин</li>
+						<li><a>Магазин</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
@@ -30,12 +29,12 @@
 		<main class="centred clearfix">
 			<div class="headline">
 				<h1 class="main_headline">Набор для путешествий «Baxter of California»</h1>
-					<nav class="headline_navigation">
+					<nav class="breadcrumbs">
 						<ul>
 							<li><a href="#">Главная</a></li>
 							<li><a href="#">Магазин</a></li>
 							<li><a href="#">Средства для ухода</a></li>
-							<li>Набор для путешествий «Baxter of California»</li>
+							<li><a>Набор для путешествий «Baxter of California»</a></li>
 						</ul>
 					</nav>
 			</div>
@@ -60,14 +59,14 @@
 				</div>
 			</div>
 			<div class="item_description">
-				<table>
+				<table width="100%">
 					<tr>
 						<td>Есть в наличии</td>
-						<td>Артикул: Dexter AE</td>
+						<td class="td2">Артикул: Dexter AE</td>
 					</tr>
 				</table>
 				<p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-				<p class="item_price">2 900 руб.</p>
+				<div class="item_price">2 900 руб.</div>
 				<a class="button" href="#">Купить</a>
 				<h2>В набор входят:</h2>
 					<ul>
@@ -89,9 +88,9 @@
 				</div>
 				<div class="footer_social">
 					<p>Давайте дружить!</p>
-					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+					<a class="social-btn social-btn-vk" href="#"></a>
+          <a class="social-btn social-btn-fb" href="#"></a>
+          <a class="social-btn social-btn-inst" href="#"></a>
 				</div>
 				<div class="footer_copyright">
 					<p>Разработано:</p>
