--- a/catalog.html
+++ b/catalog.html
@@ -3,22 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Барбершоп «Бородинский»: каталог товаров</title>
+		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="top_menu">
 			<div class="centred clearfix">
-				<div class="small_logo">
-					<a href="index.html" title="На главную">
-						<img src="img/small_logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
-					</a>
-				</div>
+				<a href="index.html" title="На главную">
+					<div class="small_logo"></div>
+				</a>
 				<nav class="top_navigation">
 					<ul>
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Новости</a></li>
 						<li><a href="#">Прайс-лист</a></li>
-						<li class="top_navigation_active">Магазин</li>
+						<li><a>Магазин</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
@@ -80,55 +79,59 @@
 				<div class="catalog_item">
 					<img src="img/complect_baxter_prev.jpg" width="220" height="165" alt="Набор для путешествий Baxter of California">
 					<a href="catalog_item.html">
-						<b>Набор для путешествий<br> 
-							«BAXTER OF CALIFORNIA»</b>
+						<p><span>Набор для путешествий</span><br> 
+							«BAXTER OF CALIFORNIA»</p>
 					</a>
-					<p class="item_price">2 900 руб.</p>
-					<a class="button" href="#">Купить</a>
+					<div class="price_container clearfix">	
+						<div class="item_price">2 900 руб.</div>
+						<a class="button" href="#">Купить</a>
+					</div>	
 				</div>
 				<div class="catalog_item">
 					<img src="img/conditioner_baxter_prev.jpg" width="220" height="165" alt="Увлажняющий кодиционер Baxter of California">
 					<a href="#">
-						<b>Увлажняющий кодиционер<br> 
-							«BAXTER OF CALIFORNIA»</b>
+						<p><span>Увлажняющий кодиционер</span><br> 
+							«BAXTER OF CALIFORNIA»</p>
 					</a>
-					<p class="item_price">750 руб.</p>
-					<a class="button" href="#">Купить</a>
+					<div class="price_container">
+						<div class="item_price">750 руб.</div>
+						<a class="button" href="#">Купить</a>
+					</div>	
 				</div>
 				<div class="catalog_item">
 					<img src="img/gel_suavecito_prev.jpg" width="220" height="165" alt="Гель для волос Suavecito">
 					<a href="#">
-						<b>Гель для волос<br> 
-							«SUAVECITO»</b>
+						<p><span>Гель для волос</span><br> 
+							«SUAVECITO»</p>
 					</a>
-					<p class="item_price">290 руб.</p>
+					<div class="item_price">290 руб.</div>
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
 					<img src="img/clay_amercrew_prev.jpg" width="220" height="165" alt="Глина для укладки волос American Crew">
 					<a href="#">
-						<b>Глина для укладки волос<br> 
-							«AMERICAN CREW»</b>
+						<p><span>Глина для укладки волос</span><br> 
+							«AMERICAN CREW»</p>
 					</a>
-					<p class="item_price">500 руб.</p>
+					<div class="item_price">500 руб.</div>
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
 					<img src="img/gel_amercrew_prev.jpg" width="220" height="165" alt="Гель для волос American Crew">
 					<a href="#">
-						<b>Гель для волос<br> 
-							«AMERICAN CREW»</b>
+						<p><span>Гель для волос</span><br> 
+							«AMERICAN CREW»</p>
 					</a>
-					<p class="item_price">300 руб.</p>
+					<div class="item_price">300 руб.</div>
 					<a class="button" href="#">Купить</a>
 				</div>
 				<div class="catalog_item">
 					<img src="img/shaving_baxter.jpg" width="220" height="165" alt="Набор для бритья Baxter of California">
 					<a href="#">
-						<b>Набор для бритья<br> 
-							«BAXTER OF CALIFORNIA»</b>
+						<p><span>Набор для бритья</span><br> 
+							«BAXTER OF CALIFORNIA»</p>
 					</a>
-					<p class="item_price">3 900 руб.</p>
+					<div class="item_price">3 900 руб.</div>
 					<a class="button" href="#">Купить</a>
 				</div>
 			</div>
@@ -142,16 +145,16 @@
 		<footer class="main_footer">
 			<div class="centred clearfix">
 				<div class="footer_contacts">
-					<p>Барбершоп «Бородинский»</p>
-					<p>Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-					<p><a href="#">Как нас найти?</a></p>
-					<p>Телефон: +7 (495) 666-02-66</p>
+					<p>Барбершоп «Бородинский»<br>
+					Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+					<a href="#">Как нас найти?</a><br>
+					Телефон: +7 (495) 666-02-66</p>
 				</div>
 				<div class="footer_social">
 					<p>Давайте дружить!</p>
-					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          			<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          			<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+					<a class="social-btn social-btn-vk" href="#"></a>
+          <a class="social-btn social-btn-fb" href="#"></a>
+          <a class="social-btn social-btn-inst" href="#"></a>
 				</div>
 				<div class="footer_copyright">
 					<p>Разработано:</p>
